fix left style overflow

--- a/source/stylesheets/left.css
+++ b/source/stylesheets/left.css
@@ -25,6 +25,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  display: inline-block;
 }
 
 .left #reading li {
